--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.duncanro.widgetexample">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,9 +30,14 @@
         </receiver>
 
         <service
+            android:name=".MyIntentService"
+            android:exported="false"></service>
+
+        <service
             android:name=".UpdateWidgetService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true" />
     </application>
 
 </manifest>
